[tool.poetry]
name = "pilgrimor-postgresql-engine"
version = "0.1.0"
description = ""
authors = ["Aleksandr <askiselev00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg = { version = "^3.0.11", extras = ["binary", "pool"] }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.961"
isort = "^5.10.1"
yesqa = "^1.3.0"
pre-commit = "^2.19.0"
wemake-python-styleguide = "^0.16.1"
black = "^22.3.0"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
anyio = "^3.6.1"
pytest-env = "^0.6.2"

[tool.poetry.plugins."pilgrimor_engine"]
"pilgrimor-engine" = "pilgrimor_postgresql_engine.engine:PostgreSQLEngine"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

